samples/_failures_safe/1761593540_2876ec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d6f50e6b.c: In function ‘main’:
./samples/SAFE/__tmp_d6f50e6b.c:138:9: error: expected declaration or statement at end of input
  138 |         printf("No valid words found in input.\n");
      |         ^~~~~~
./samples/SAFE/__tmp_d6f50e6b.c:138:9: error: expected declaration or statement at end of input
